[gd_scene load_steps=4 format=3 uid="uid://bl2ec07b65udp"]

[ext_resource type="Script" uid="uid://sq568tsdn1kv" path="res://src/game/screens/ui/winnning_screen.gd" id="1_7yr6c"]
[ext_resource type="FontFile" uid="uid://tivitgqo2nu0" path="res://src/assets/font/Bahiana/Bahiana-Regular.ttf" id="2_lbnct"]
[ext_resource type="PackedScene" uid="uid://h3sfixciml8g" path="res://src/game/screens/ui/buttons/MenuButton.tscn" id="3_otekb"]

[node name="WinnningScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7yr6c")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -357.5
offset_top = -208.0
offset_right = 357.5
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_lbnct")
theme_override_font_sizes/font_size = 80
text = "CONGRATS ! 
YOU MADE IT TO YOUR PARENTS ROOM"
horizontal_alignment = 1

[node name="VContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = 18.0
offset_right = 77.5
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2

[node name="NextButton" parent="VContainer" instance=ExtResource("3_otekb")]
layout_mode = 2
size_flags_vertical = 6
text = "Next Level"

[node name="AnimatedSprite2D" parent="VContainer/NextButton" index="0"]
visible = false

[node name="Long" parent="VContainer/NextButton" index="1"]
visible = true
position = Vector2(101, 44)

[node name="Container" type="HBoxContainer" parent="VContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="BackToMain" parent="VContainer/Container" instance=ExtResource("3_otekb")]
layout_mode = 2
size_flags_horizontal = 6
text = "Menu"

[node name="AnimatedSprite2D" parent="VContainer/Container/BackToMain" index="0"]
position = Vector2(65, 44)
scale = Vector2(0.64, 0.5875)

[node name="QuitButton" parent="VContainer/Container" instance=ExtResource("3_otekb")]
layout_mode = 2
size_flags_horizontal = 6
text = "Quit"

[editable path="VContainer/NextButton"]
[editable path="VContainer/Container/BackToMain"]
